# python-exec

./: .gitignore  COPYING  Makefile.am  README  configure.ac  pytest.ini
.github/workflows/: ci.yaml
config/: python-exec.conf.example
src/: print-bufsiz.c  python-exec-c.c  python-exec.c  python-exec.in  python-exec2.c  python-exec2.py.in  python-wrapper.c
test/: conftest.py  test_core.py  test_select.py
tests/: abs-symlink-test  c-symlink-path-test  c-symlink-test  config-script-override-test  deep-long-symlink-test  deep-symlink-test  disable-test  epython-disable-test  epython-test  eselect-test  gen-config.sh  long-path-test  long-symlink-test  order-disable-test  order-test  python-argv0-test  pythonwrap-__file__-test  pythonwrap-abs-symlink-test  pythonwrap-argv0-test  pythonwrap-copy-test  pythonwrap-deep-symlink-test  pythonwrap-symlink-test  pythonwrap-test  runner.sh  symlink-pref-test  symlink-test  wrapper-copy-test
